--- a/src/app/components/nav.component.html
+++ b/src/app/components/nav.component.html
@@ -1,11 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-  <h1>Hallo, ich bin die Navigation!</h1>
-  AHHHHHHHHHHHHHHHHHHHHHHH
-</body>
-</html>
+  <ul>
+    <li>
+      <a routerLink="/Main" routerLinkActive="true">AHHHHHHHHHHHHHHHHHHHHHHH</a>
+    </li>
+    <li>
+      <a routerLink="/About" routerLinkActive="true">About</a>
+    </li>
+  </ul>
