--- a/src/styles.css
+++ b/src/styles.css
@@ -3,6 +3,10 @@ body{
   background-color: rgb(255,255,255);
 }
 
+*{
+  font-family: Arial;
+}
+
 /* Table cells */
 td{
   background: rgba(11, 123, 140, 0.25);
@@ -14,14 +18,36 @@ td{
   font: normal 20px/40px "Advent Pro", Helvetica, sans-serif;
 }
 
-/* Top bar */
-.top{
+/* Navigation Bar */
+.nav{
   position: absolute;
   top: 0;
   left: 0;
   width: 100%;
-  height: 75px;
   background-color: #086472;
+  text-align: center;
+}
+
+.nav ul{
+  margin: 0px;
+}
+
+.nav ul li{
+  display: inline;
+  padding: 0px;
+  margin: 0px;
+}
+
+.nav ul li a{
+  display: inline-block;
+  cursor: pointer;
+  padding: 20px;
+  text-decoration: none;
+  color: white;
+  font-size: 30px;
+}
+.nav ul li a:hover{
+  background-color: #0b95aa;
 }
 
 /* Bottom bar */
