made the main component work

--- a/src/app/components/nav.component.html
+++ b/src/app/components/nav.component.html
@@ -1,6 +1,6 @@
   <ul>
     <li>
-      <a routerLink="/Main" routerLinkActive="true">AHHHHHHHHHHHHHHHHHHHHHHH</a>
+      <a routerLink="/Main" routerLinkActive="true">Ebay Prices</a>
     </li>
     <li>
       <a routerLink="/About" routerLinkActive="true">About</a>
