--- a/src/styles.css
+++ b/src/styles.css
@@ -7,15 +7,26 @@ body{
   font-family: Arial;
 }
 
+table {
+}
+
 /* Table cells */
 td{
-  background: rgba(11, 123, 140, 0.25);
+  background: rgba(250, 250, 250, 0.5);
   padding: 10px;
+  margin: 0px;
+  border: black;
+  border-style: solid;
 }
 
 /* Response div */
-#response{
+#response {
   font: normal 20px/40px "Advent Pro", Helvetica, sans-serif;
+  text-align: center;
+  margin-left: auto;
+  margin-right: auto;
+  width: 1000px;
+  height: 100px;
 }
 
 /* Navigation Bar */
@@ -94,7 +105,7 @@ td{
 
 /* Search button */
 .btnSearch {
-  margin-left: -75px;
+  margin-left: -70px;
   width: 50px;
   -webkit-box-sizing: content-box;
   -moz-box-sizing: content-box;
